# djangokw

./: README.md  blog_data.json  client_data.json  data.json  dump.rdb  group_data.json  letter_data.json  mailing_data.json  pyproject.toml  users_data.json
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_owner.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  home.html
client/: forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_client_owner.py
client/templates/client/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  clients.html  home.html
config/: settings.py  urls.py
letter/: admin.py  form.py  models.py  urls.py  views.py
letter/migrations/: 0001_initial.py  0002_initial.py  0003_alter_letter_body.py  0004_alter_letter_writer.py
letter/templates/letter/: letter_confirm_delete.html  letter_detail.html  letter_form.html  (+1 more)
logmail/: admin.py  form.py  models.py  views.py
logmail/migrations/: 0001_initial.py  0002_initial.py
mailing/: admin.py  form.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingletters_end_alter_mailingletters_owner.py  0003_alter_mailingletters_start.py  0004_alter_mailingletters_options.py  0005_alter_mailingletters_clients.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py  0004_alter_user_options.py
(+15 files in other folders)
